--- a/src/_components/WhatsappWidget/WhatsappWidget.module.css
+++ b/src/_components/WhatsappWidget/WhatsappWidget.module.css
@@ -1,6 +1,5 @@
 .wp_widget {
   position: fixed;
-  opacity: 0;
   bottom: 6.5rem;
   right: 3rem;
   animation: fadeIn 3s;
@@ -11,7 +10,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 15px 3px #00000030;
-   transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
   background-image: linear-gradient(
     270deg,
     #25d366 0%,
@@ -25,7 +24,7 @@
 
 .wp_widget:hover {
   transform: scale(1.1);
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .wp_widget svg {
@@ -37,8 +36,10 @@
 @keyframes fadeIn {
   0% {
     opacity: 0;
+    display: none;
   }
   100% {
     opacity: 1;
+    display: flex;
   }
 }
